# limitora

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: windows-codex-transport.yml
docs/architecture/: README.md  cli-activation.md  domain-model.md  implementation-plan.md  output-contracts.md  provider-contract.md
docs/providers/: codex-protocol.md  opencode-go-protocol.md
docs/research/: README.md  provider-data-sources.md  python-compatibility.md
scripts/: README.md
src/limitora/: __init__.py  _runner_path.py  api.py  composition.py  output.py
src/limitora/cache/: __init__.py
src/limitora/cli/: __init__.py
src/limitora/core/: __init__.py  status_service.py
src/limitora/models/: __init__.py  domain.py
src/limitora/providers/: __init__.py  _codex_jsonl.py  _codex_jsonl_protocol.py  _codex_jsonl_transport.py  _opencode_go.py  _opencode_go_httpx.py  cache.py  codex.py  contract.py  fake.py  ports.py
tests/: _native_runner.py  test_cli.py  test_codex_jsonl.py  test_codex_jsonl_mapping.py  test_codex_jsonl_protocol.py  test_codex_jsonl_transport.py  test_codex_provider.py  test_domain.py  test_opencode_go_composition.py  test_opencode_go_evidence_provenance.py  test_opencode_go_httpx.py  test_opencode_go_provider.py  test_output.py  test_provider_cache.py  test_provider_composition.py  test_provider_contract.py  test_public_library_api.py  test_runner_path.py  test_status_service.py
tests/fixtures/: opencode_go_dashboard_usage.json
